# StressNET

./: .gitignore  .readthedocs.yaml  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  Makefile  README.md  README_MAINTAINERS.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.rst  build_docs.py  conf.py  index.rst  requirements.txt
examples/: __init__.py  download_radial_1d_2d_inverted_9v.py  finetuning.ipynb  inference_in_silico.ipynb  inference_in_vivo.ipynb
examples/example_data/inference/experimental/xenopus_myosin/: myosin.tif  skeleton.tif
examples/example_data/inference/synthetic/normal_furrow_circular/: step_24.dmp
stressnet/: __init__.py  preprocessing.py
stressnet/models/: __init__.py  _downloader.py  _registry.py
stressnet/net/: __init__.py  custom_layers.py  stressnet.py
stressnet/utils/: data_utils.py  inference.py  io.py  plotting.py
tests/: test_data_utils.py  test_downloader.py  test_example_dataset_download.py  test_inference.py  test_io.py  test_models.py  test_package.py  test_plotting.py
