[tool.poetry]
name = "stressnet"
version = "0.1.0"
description = "An adaptable deep-learning model for mechanical stress inference in tissues"
authors = ["Nicolás Aldecoa Rodrigo <nicolasaldecoa@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/nicolasaldecoa/StressNET"
repository = "https://github.com/nicolasaldecoa/StressNET"
documentation = "https://stressnet.readthedocs.io/en/stable/"
keywords = ["deep-learning", "mechanical-stress", "tissue", "biophysics", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
packages = [{include = "stressnet"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# Core — always installed
numpy = "1.23.4"          # <1.24 required by tensorflow 2.8
pandas = ">=1.4,<3"
scipy = ">=1.8"
scikit-learn = ">=1.0"
gdown = ">=5.1"
platformdirs = ">=4.2"

# GPU is used automatically at runtime if CUDA 11.2 + cuDNN 8.1 are installed
tensorflow = { version = "2.8.4", markers = "platform_system != 'Darwin'" }
tensorflow-macos = { version = "2.8.0", markers = "platform_system == 'Darwin' and platform_machine == 'arm64'" }
tensorflow-io-gcs-filesystem = [
    { version = "0.31.0", markers = "platform_system == 'Windows'" },
    { version = ">=0.37.1", markers = "platform_system != 'Windows'" }
]

spektral   = "1.3.1"
matplotlib = "^3.10.8"
cmocean = "^4.0.3"
forsys = "^1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
ruff = ">=0.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7,<9"
sphinx-rtd-theme = ">=2,<4"
numpy = "1.23.4"
pandas = ">=1.4,<3"
scipy = ">=1.8"
scikit-learn = ">=1.0"
gdown = ">=5.1"
platformdirs = ">=4.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --tb=short --cov=stressnet --cov-report=term"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["stressnet"]

[tool.coverage.run]
source = ["stressnet"]
branch = true

[tool.coverage.report]
fail_under = 0
